--- a/index.html
+++ b/index.html
@@ -1,3 +1,50 @@
-<h1>Hola</h1>
-<p>hola </p>
-<h3>Hola puppy</h3>
+<!Doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Inicio</title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+</head>
+<body>
+
+	<div id="contenedor">
+		<header>
+			<a href="index.html"><h1>Big Shoes" </h1> </a>
+			<div id="redes">
+				<a href= "http://www.facebook.com"><img src="imagenes/facebook.png" alt="Facebook"></a>
+				<a href= "http://www.instragram.com"><img src="imagenes/instagram.png" alt="Instragram"></a>
+			</div>
+		</header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="tipos.html">Tennis</a></li>
+				<li><a href="bebidas.html">Accesorios</a></li>
+				<li><a href="registrarse.html">Iniciar Sesion</a></li>
+			</ul>
+</nav>
+<section id="banner">
+	<img src="imagenes/banner.jpg" alt="">
+</section>
+<section id="contenido">
+	<article class="articulos">
+		<h2>¿Quienes somos?</h2>
+		<p>Somos una empresa que junta todos las delicias de México y las junta en una misma pagina para que llegue a tu paladar y puedas disfrutar de ello sin la necesidad de viajar a los originarios estados de cada gran delicia de taco.</p>
+		<P>Tomate el tiempo para revisar todo nuestro catalogo, cualquier duda puedes mandarnos mensaje a nuestras redes para una mejor atención.</P>
+		<img src="imagenes/img1.jpg" alt="">
+		
+	</article>
+</section>
+<aside>
+	<h3>Promociones</h3>
+	<p>Tenemos grandes promociones por inauguración pregunta por nuestras redes sociales para una mejor atención, sabemos que te van a encantar</p>
+	<div id=imgaside><img src="imagenes/img2.png" alt=""></div>
+</aside>
+
+<footer>
+	<p>&copy; Todos los derechos Reservados a @OmarXXZavaleta en Instagram</p>
+</footer>
+</div>
+
+</body>
+</html>
