--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
 	<div id=imgaside><img src="imagenes/img2.png" alt=""></div>
 </aside>
 
-<footer>
-	<p>&copy; Todos los derechos Reservados a @OmarXXZavaleta en Instagram</p>
-</footer>
+<footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Universidad Tecnologica de Nezahualcoyotl || Zavaleta Angeles Omar</p>
+    </div>
+    <!-- /.container -->
+  </footer>
 </div>
 
 </body>
