--- a/index.html
+++ b/index.html
@@ -2,52 +2,42 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Inicio</title>
+	<title>Bienvenidos</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-
-	<div id="contenedor">
 		<header>
-			<a href="index.html"><h1>Big Shoes" </h1> </a>
+			<a href="index.html"><h1>Big X Shoes" </h1> </a>
 			<div id="redes">
 				<a href= "http://www.facebook.com"><img src="imagenes/facebook.png" alt="Facebook"></a>
 				<a href= "http://www.instragram.com"><img src="imagenes/instagram.png" alt="Instragram"></a>
 			</div>
-		</header>
+        </header>
+        <!--Navegacion-->
 		<nav>
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="tipos.html">Tennis</a></li>
 				<li><a href="bebidas.html">Accesorios</a></li>
-				<li><a href="registrarse.html">Iniciar Sesion</a></li>
-			</ul>
-</nav>
-<section id="banner">
-	<img src="imagenes/banner.jpg" alt="">
-</section>
-<section id="contenido">
-	<article class="articulos">
-		<h2>¿Quienes somos?</h2>
-		<p>Somos una empresa que junta todos las delicias de México y las junta en una misma pagina para que llegue a tu paladar y puedas disfrutar de ello sin la necesidad de viajar a los originarios estados de cada gran delicia de taco.</p>
-		<P>Tomate el tiempo para revisar todo nuestro catalogo, cualquier duda puedes mandarnos mensaje a nuestras redes para una mejor atención.</P>
-		<img src="imagenes/img1.jpg" alt="">
-		
-	</article>
-</section>
-<aside>
-	<h3>Promociones</h3>
-	<p>Tenemos grandes promociones por inauguración pregunta por nuestras redes sociales para una mejor atención, sabemos que te van a encantar</p>
-	<div id=imgaside><img src="imagenes/img2.png" alt=""></div>
-</aside>
+				<li><a href="registrarse.html">Inicio Sesion</a></li>
+            </ul>
+        </nav>
+        <!--Una imagen de banner-->
+        <section id="banner">
+            <img src="imagenes/banner.jpg" alt="">
+        </section>
 
-<footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Universidad Tecnologica de Nezahualcoyotl || Zavaleta Angeles Omar</p>
-    </div>
-    <!-- /.container -->
-  </footer>
-</div>
+        <section id="contenido">
+	        <article class="articulos">
+		        <h2>Bienvenidos a Big XX Shoes</h2>
+		        <p>Los tennis que buscas a la comodidad del internet</p>
+		        <P>Tomate el tiempo para revisar todo nuestro catalogo, cualquier
+                    duda puedes mandarnos mensaje a nuestras redes para una mejor atención.</P>
+                <img src="imagenes/img1.jpg" alt="">
+            </article>
+
+        </section>
 
 </body>
+<footer><p>Copyright &copy; 2020 Zavaleta Angeles Omar.</p></footer>
 </html>
