--- a/index.html
+++ b/index.html
@@ -2,32 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Bienvenidos</title>
+	<title>Inicio</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
+    <!--El titulo principal-->
 		<header>
-			<a href="index.html"><h1>Big X Shoes" </h1> </a>
+			<a href="index.html"><h1>Big XX Shoes </h1> </a>
 			<div id="redes">
 				<a href= "http://www.facebook.com"><img src="imagenes/facebook.png" alt="Facebook"></a>
 				<a href= "http://www.instragram.com"><img src="imagenes/instagram.png" alt="Instragram"></a>
 			</div>
         </header>
         <!--Navegacion-->
-		<nav>
+		<nav id="Menu de --Navegacion--">
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
-				<li><a href="tipos.html">Tennis</a></li>
-				<li><a href="bebidas.html">Accesorios</a></li>
-				<li><a href="registrarse.html">Inicio Sesion</a></li>
+				<li><a href="#">Tennis</a></li>
+				<li><a href="#">Accesorios</a></li>
+				<li><a href="#">Inicio Sesion</a></li>
             </ul>
         </nav>
         <!--Una imagen de banner-->
         <section id="banner">
             <img src="imagenes/banner.jpg" alt="">
         </section>
-
-        <section id="contenido">
+        <!-- Un poco de texto de bienvenida-->
+        <section id="contenidoBienvenida">
 	        <article class="articulos">
 		        <h2>Bienvenidos a Big XX Shoes</h2>
 		        <p>Los tennis que buscas a la comodidad del internet</p>
