--- a/facebook.html
+++ b/facebook.html
@@ -3,17 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Servicios</title>
 </head>
+<style>
+	h1{
+		color: black;
+		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		font-size: medium;
+	}
+</style>
 <body>
 	<div>
+		<h1>Publicación de pagina de facebook</h1>
 		<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D104481681480896%26id%3D104478911481173&show_text=true&width=552&height=402&appId" width="552" height="402" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 	</div>
 
 	<div>
+		<h1>Video de youtube</h1>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/wyn6v87dKdc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	<div>
+		<h1>Ubicacion de un lugar en maps</h1>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15048.670055023422!2d-99.1455535!3d19.4483432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2781b5d8f2b079df!2sMajor%20Sneaker%20Store!5e0!3m2!1ses-419!2smx!4v1605243864154!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 	</div>
 </body>
