--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Inicio</title>
+	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
