--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Inicio</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link href="https://fonts.google.com/specimen/Titillium+Web#standard-styles">
 </head>
 <body>
     <!--El titulo principal-->
 		<header>
 			<a href="index.html"><h1>Big XX Shoes </h1> </a>
-			<div id="redes">
-				<a href= "http://www.facebook.com"><img src="imagenes/facebook.png" alt="Facebook"></a>
-				<a href= "http://www.instragram.com"><img src="imagenes/instagram.png" alt="Instragram"></a>
-			</div>
         </header>
         <!--Navegacion-->
 		<nav id="Menu de --Navegacion--">
@@ -21,7 +18,13 @@
 				<li><a href="#">Tennis</a></li>
 				<li><a href="#">Accesorios</a></li>
 				<li><a href="#">Inicio Sesion</a></li>
-            </ul>
+				<o>
+					<a href= "http://www.facebook.com"><img src="imagenes/facebook.png" alt="Facebook"></a>
+					<a href= "http://www.instragram.com"><img src="imagenes/instagram.png" alt="Instragram"></a>
+				</o>
+			</ul>
+			
+			
         </nav>
         <!--Una imagen de banner-->
         <section id="banner">
@@ -33,12 +36,54 @@
 		        <h2>Bienvenidos a Big XX Shoes</h2>
 		        <p>Los tennis que buscas a la comodidad del internet</p>
 		        <P>Tomate el tiempo para revisar todo nuestro catalogo, cualquier
-                    duda puedes mandarnos mensaje a nuestras redes para una mejor atención.</P>
+					duda puedes mandarnos mensaje a nuestras redes para una mejor atención.</P>
+					<ol>
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+						<li>X
+					  </ol>
                 <img src="imagenes/img1.jpg" alt="">
             </article>
 
         </section>
 
 </body>
-<footer><p>Copyright &copy; 2020 Zavaleta Angeles Omar.</p></footer>
+<footer>
+	<p>Copyright &copy; 2020 Zavaleta Angeles Omar.</p>
+</footer>
 </html>
