--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <!--Una imagen de banner-->
         <section id="banner">
-            <img src="imagenes/banner.jpg" alt="">
+            <img src="img/banner.jpg" alt="">
         </section>
         <!-- Un poco de texto de bienvenida-->
         <section id="contenidoBienvenida">
