--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
 		        <p>Los tennis que buscas a la comodidad del internet</p>
 		        <P>Tomate el tiempo para revisar todo nuestro catalogo, cualquier
 					duda puedes mandarnos mensaje a nuestras redes para una mejor atención.</P>	
-                <img src="imagenes/img1.jpg" alt="">
+				<img src="imagenes/img1.jpg" alt="">
+				<h2>Los productos más relevantes</h2>
+				
 			</article>
 			
-		<div id="productos">
-			<h1>Los productos más relevantes</h1>
+		
+			<div id="productos">
 			<div id="productosNuevos">
+				
 				<fieldset>
 					<legend><h3>Jordan 1</h3></legend>					
 					<h3>Spider-Man into the Spider-Verse</h3>
@@ -51,13 +54,44 @@
 				</p>
 				<div id=imgaside><img src="img/jordan1SP.png" alt=""></div>
 				<div id=botones><input type="submit" value="Ver"></div>
-				   </fieldset>
+				</fieldset>
 			</div>
 		</div>
+		<br>
+		<article class="producto2">
+			<div id="productosNuevos">
+				<fieldset>
+					<legend><h3>Jordan 1</h3></legend>					
+					<h3>Cactus Jack Travis Scott</h3>
+					<p>Este iconico Jordan 1 traido desde 1985 fue diseñado por el cantante
+						Travis Scott</p>
+				</p>
+				<div id=imgaside><img src="img/jordan1SP.png" alt=""></div>
+				<div id=botones><input type="submit" value="Ver"></div>
+				   </fieldset>
+			</div>
+			<br>
+		</article>
+		<article class="producto3">
+			<div id="productosNuevos">
+				<fieldset>
+					<legend><h3>Jordan 1</h3></legend>					
+					<h3>Dior</h3>
+					<p>Este iconico Jordan 1 traido desde 1985 fue diseñado por la importantisima
+						empresa Dior
+					</p>
+				</p>
+				<div id=imgaside><img src="img/jordan1SP.png" alt=""></div>
+				<div id=botones><input type="submit" value="Ver"></div>
+				   </fieldset>
+			</div>
+			<br>
+		</article>
 
-			
+		
 
-        </section>
+		</section>
+		
 
 </body>
 <footer>
