--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="#">Tennis</a></li>
+				<li><a href="direccion.html">Ubicaciones</a></li>
 				<li><a href="">Inicio Sesion</a></li>
 				<li><b href onclick="ejecuta();">Alerta</b></li>
 				<o>
-					<a href= "http://www.facebook.com"><img src="img/facebook.png" alt="Facebook"></a>
+					<a href= "https://www.facebook.com/BigShoes-104478911481173/"><img src="img/facebook.png" alt="Facebook"></a>
 					<a href= "http://www.instragram.com"><img src="img/instagram.png" alt="Instragram"></a>
 				</o>
 			</ul>
 <!--Alerta del codigo escolar-->
 			<script>
 				function ejecuta() {
-				  Promise.resolve("Hola esta pagina esta hecha para uso unicamente escolar si estas de acuerdo sigue navegando, si no sal de la pagina").
+				  Promise.resolve("Hola esta pagina esta hecha para uso unicamente escolar si estas de acuerdo sigue navegando, si no puedes salir de la pagina").
 					then(a => alert(`Alerta!! ${a}`)).
 					catch(e => alert(`Fallo1 ${e.message}`));
 				}
@@ -46,13 +47,31 @@
 					duda puedes mandarnos mensaje a nuestras redes para una mejor atención.</P>
 				<h6>Lee por favor nuestra alerta que se encuentra en la parte superior</h6>
 				<img src="imagenes/img1.jpg" alt="">
-				<h2 id="productoE">Nuestro producto más exclusivo</h2>
+
+				<h2 id="productoE">Nuestros productos más exclusivos</h2>
 
 				<p id="jordan1Dior">
 					<img id="imgJ" src="img/jordan1Dior.png" alt="">
 					<p id="titulos">Jordan 1 Dior</p>	
 				</p>
-					
+				<p id="jordan1Dior">
+					<img id="imgJ" src="img/jordan1SpI.png" alt="">
+					<p id="titulos">Jordan 1 Spiderman into The SpiderVerse</p>	
+				</p>
+				<p id="jordan1Dior">
+					<img id="imgJ" src="img/jordan1TS.png" alt="">
+					<p id="titulos">Jordan 1 Cacktus Jack</p>	
+				</p>
+
+				<h2 id="productoE">Sigue las publicaciones de nuestra pagina de Facebook</h2>
+				<p id="mapa"><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.
+					com%2Fpermalink.php%3Fstory_fbid%3D104481681480896%26id%3D104478911481173&show_text=true&width=
+					552&height=402&appId" width="552" height="402" style="border:none;overflow:hidden" scrolling="no"
+					 frameborder="0" allowfullscreen="true"allow="autoplay; clipboard-write; encrypted-media; picture-in
+					 -picture; web-share"></iframe>
+					</p>
+
+
 		</section>
 </body>
 <footer>
