--- a/direccion.html
+++ b/direccion.html
@@ -16,11 +16,12 @@
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="#">Tennis</a></li>
-				<li><a href="#">Accesorios</a></li>
-				<li><a href="#">Inicio Sesion</a></li>
+				<li><a href="direccion.html">Ubicaciones</a></li>
+				<li><a href="">Inicio Sesion</a></li>
+				<li><b href onclick="ejecuta();">Alerta</b></li>
 				<o>
-					<a href= "http://www.facebook.com"><img src="imagenes/facebook.png" alt="Facebook"></a>
-					<a href= "http://www.instragram.com"><img src="imagenes/instagram.png" alt="Instragram"></a>
+					<a href= "https://www.facebook.com/BigShoes-104478911481173/"><img src="img/facebook.png" alt="Facebook"></a>
+					<a href= "http://www.instragram.com"><img src="img/instagram.png" alt="Instragram"></a>
 				</o>
 			</ul>
         </nav>
@@ -37,7 +38,15 @@
                 -99.1455535!3d19.4483432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2781b5d8f2b079df!2sMajor%20Sneaker%20Store
                 !5e0!3m2!1ses-419!2smx!4v1605243864154!5m2!1ses-419!2smx" width="600" height="450" frameborder="0"
                  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-		        </p><br>
+				</p><br>
+				<h2>Videos grabados en sucursal</h2><br>
+				<p id="mapaText">A continuación los videos grabados en nuestra sucursal por clientes</h3></p><br>
+				<p id="mapa"><iframe width="560" height="315" src="https://www.youtube.com/embed/kjxbepcZOEc"
+				 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+				  gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+				  <p id="mapa"><iframe width="560" height="315" src="https://www.youtube.com/embed/1W0RShPh_P4"
+					 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+					  picture-in-picture" allowfullscreen></iframe></p>
 		</section>
 </body>
 <footer>
