--- a/direccion.html
+++ b/direccion.html
@@ -33,13 +33,13 @@
         <section id="contenidoBienvenida">
 	        <article class="articulos">
 		        <h2>Bienvenidos a Big XX Shoes Sucursales</h2><br>
-                <p id="mapaText">Nuestra unica sucural mas cercana es la siguiente que puede observar en el maps</h3></p><br>
+                <p id="mapaText">Nuestra unica sucural mas cercana es la siguiente del maps</h3></p><br>
                 <p id="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15048.670055023422!2d
                 -99.1455535!3d19.4483432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2781b5d8f2b079df!2sMajor%20Sneaker%20Store
                 !5e0!3m2!1ses-419!2smx!4v1605243864154!5m2!1ses-419!2smx" width="600" height="450" frameborder="0"
                  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				</p><br>
-				
+
 				<h2>Videos grabados en sucursal</h2><br>
 				<p id="mapaText">A continuación los videos grabados en nuestra sucursal por clientes</h3></p><br>
 				<p id="mapa"><iframe width="560" height="315" src="https://www.youtube.com/embed/kjxbepcZOEc"
