--- a/direccion.html
+++ b/direccion.html
@@ -15,9 +15,9 @@
 		<nav id="Menu de --Navegacion--">
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
-				<li><a href="#">Tennis</a></li>
+				<li><a href="productos.html">Tennis</a></li>
 				<li><a href="direccion.html">Ubicaciones</a></li>
-				<li><a href="">Inicio Sesion</a></li>
+				<li><a href="inicioSesion.html">Inicio Sesion</a></li>
 				<li><b href onclick="ejecuta();">Alerta</b></li>
 				<o>
 					<a href= "https://www.facebook.com/BigShoes-104478911481173/"><img src="img/facebook.png" alt="Facebook"></a>
