--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -45,33 +45,19 @@
 		        <p>Los tennis que buscas a la comodidad del internet</p>
 		        <P>Tomate el tiempo para revisar todo nuestro catalogo, cualquier
 					duda puedes mandarnos mensaje a nuestras redes para una mejor atención.</P>
-				<h6 onclick="ejecuta();">Lee por favor nuestra alerta que se encuentra al dar clic sobre este mensaje</h6>
-				<img src="imagenes/img1.jpg" alt="">
+				<h6>Al iniciar sesión usted confirma que a leido la alerta que se encuentra 
+                    en la parte superior
+                </h6>
+                <img src="imagenes/img1.jpg" alt="">
+                <form action="index.html" method="post">
+                <p>Ingrese su correo electronico:<br></p>
+                   <p><input type="email" name="correo" required><br></p>
+                     <p>Ingrese su contraseña:<br></p>
+                     <p><input type="password" name="contraseña" required></p>
+                     <p><input type="submit" value="Iniciar Sesion"></p>
 
-				<h2 id="productoE">Nuestros productos más exclusivos</h2>
-
-				<p id="jordan1Dior">
-					<img id="imgJ" src="img/jordan1Dior.png" alt="">
-					<p id="titulos">Jordan 1 Dior</p>	
-				</p>
-				<p id="jordan1Dior">
-					<img id="imgJ" src="img/jordan1SpI.png" alt="">
-					<p id="titulos">Jordan 1 Spiderman into The SpiderVerse</p>	
-				</p>
-				<p id="jordan1Dior">
-					<img id="imgJ" src="img/jordan1TS.png" alt="">
-					<p id="titulos">Jordan 1 Cacktus Jack</p>	
-				</p>
-
-				<h2 id="productoE">Sigue las publicaciones de nuestra pagina de Facebook</h2>
-				<p id="mapa"><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.
-					com%2Fpermalink.php%3Fstory_fbid%3D104481681480896%26id%3D104478911481173&show_text=true&width=
-					552&height=402&appId" width="552" height="402" style="border:none;overflow:hidden" scrolling="no"
-					 frameborder="0" allowfullscreen="true"allow="autoplay; clipboard-write; encrypted-media; picture-in
-					 -picture; web-share"></iframe>
-					</p>
-
-
+                    <p><a href="indexUser.html" id="botonPer">Iniciar sesion</a></p>
+                </form>
 		</section>
 </body>
 <footer>
