--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="productos.html">Tennis</a></li>
-				<li><a href="direccion.html">Ubicaciones</a></li>
+				<li><a href="direccion.html">Ubicsaciones</a></li>
 				<li><a href="inicioSesion.html">Inicio Sesion</a></li>
 				<li><b href onclick="ejecuta();">Alerta</b></li>
 				<o>
