--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       content="width=device-width,
       initial-scale=1.0">
     <title>Control IoT</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script
       src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
     <script
@@ -20,7 +21,7 @@
   </head>
   <body>
     <div class="contenido">
-      <h1>Control IoT</h1>
+      <h1 class="text-white bg-dark">Control IoT</h1>
       <p>
         <a href="dispositivo.html"
           target="_blank">Ver
