--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           Salida
         </label>
       </p>
-      <mi-footer></mi-footer>
+      <mi-footer class="text-white bg-dark"></mi-footer>
     </div>
     <script type="module"
       src="js/CtrlMovil.js">
