--- a/dispositivo.html
+++ b/dispositivo.html
@@ -16,11 +16,12 @@
       </script>
   </head>
   <body>
-    <div class="contenido">
-      <h1>
+    <h1 class="text-white bg-dark">
         Simulación de Dispositivo
         IoT
       </h1>
+    <div class="contenido">
+      
       <p>
         <a href="index.html"
           target="_blank">
@@ -61,8 +62,9 @@
         <output id="iotError">
         </output>
       </p>
-      <mi-footer></mi-footer>
+      
     </div>
+    <mi-footer class="text-white bg-dark"></mi-footer>
     <script type="module"
       src="disp/CtrlDispositivo.js">
       </script>
