--- a/historial.html
+++ b/historial.html
@@ -6,6 +6,8 @@
       content="width=device-width,
        initial-scale=1.0">
     <title>Historial IoT</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    
     <script
       src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
     <script
@@ -20,13 +22,13 @@
   </head>
   <body>
     <div class="contenido">
-      <table>
+      <table class="table table-hover">
         <thead>
           <tr>
-            <th>id</th>
-            <th>dispositivoId</th>
-            <th>valor</th>
-            <th>timestamp</th>
+            <th scope="col">id</th>
+            <th scope="col">dispositivoId</th>
+            <th scope="col">valor</th>
+            <th >timestamp</th>
           </tr>
         </thead>
         <tbody></tbody>
