--- a/historial.html
+++ b/historial.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <div class="contenido">
+      <div class="table-responsive">
       <table class="table table-hover">
         <thead>
           <tr>
@@ -33,6 +34,7 @@
         </thead>
         <tbody></tbody>
       </table>
+    </div>
     </div>
     <script type="module"
       src="js/CtrlHistorial.js">
